--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "acacha/admin-lte-template-laravel": "4.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "samkitano/aktiv8me": "1.*"
+        "samkitano/aktiv8me": "1.*",
+        "spatie/laravel-permission": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
